Delte old card component implement backend for friendsip

--- a/client/src/app/training-plan-card/training-plan-card.component.html
+++ b/client/src/app/training-plan-card/training-plan-card.component.html
@@ -16,7 +16,9 @@
     <p class="card-text">
       {{ trainingPlan.trainingFrequency }} Trainings / Woche
     </p>
-    <p class="card-text">Zuletzt angesehen{{ trainingPlan.lastUpdated }}</p>
+    <p class="card-text ml-3">
+      {{ trainingPlan.lastUpdated }}
+    </p>
   </div>
   <div class="card-footer" style="background: inherit; border-color: inherit">
     <button
