Implement friend modal component

--- a/client/src/app/Pages/profile/profile.component.html
+++ b/client/src/app/Pages/profile/profile.component.html
@@ -1,7 +1,7 @@
 @if (isLoading) {
 <app-spinner></app-spinner>
 } @else {
-<div class="container my-5 profile-container">
+<div class="container profile-container my-md-5 my-0">
   <div class="bg-white shadow rounded overflow-hidden">
     <div class="px-4 pt-0 pb-4 cover">
       <div class="media align-items-end profile-head">
