--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -16,3 +16,13 @@ body {
 .blur-background > *:not(app-modal) {
   filter: blur(2px);
 }
+
+.outlet-wrapper {
+  padding-inline: 7.5%;
+}
+@media screen and (max-width: 786px) {
+  .outlet-wrapper {
+    padding-inline: 5%;
+    padding-bottom: 5rem;
+  }
+}
