Fix friend suggestion mapping and implement fetch data while suggesting friends

--- a/client/src/app/friend-card/friend-card.component.html
+++ b/client/src/app/friend-card/friend-card.component.html
@@ -9,8 +9,8 @@
     />
     <div class="flex-grow-1">
       <h5 class="card-title mb-0">{{ friend.name }}</h5>
-      <p class="card-text text-muted">{{ friend.username }}</p>
+      <p class="card-text text-muted">{{ friend.email }}</p>
     </div>
-    <!-- <button class="custom-button"><i class="fas fa-user-plus"></i>Adden</button> -->
+    <button class="custom-button"><i class="fas fa-user-plus"></i>Adden</button>
   </div>
 </div>
