--- a/client/src/app/friend-modal/friend-modal.component.html
+++ b/client/src/app/friend-modal/friend-modal.component.html
@@ -4,7 +4,7 @@
 ></app-alert>
 
 <input
-  class="form-control me-2 mt-2"
+  class="form-control me-2 mb-2"
   type="search"
   placeholder="Freunde suchen"
   aria-label="Search"
