Implement fancy icon for adding friends

--- a/client/src/app/friend-card/friend-card.component.html
+++ b/client/src/app/friend-card/friend-card.component.html
@@ -11,8 +11,12 @@
       <h5 class="card-title mb-0">{{ friend.name }}</h5>
       <p class="card-text text-muted">{{ friend.email }}</p>
     </div>
-    <button class="custom-button" (click)="onAddFriend()">
-      <i class="fas fa-user-plus"></i>Adden
+    <button
+      type="button"
+      class="btn btn-light btn-md m-1"
+      (click)="onAddFriend()"
+    >
+      <i class="bx bx-user-plus"></i>
     </button>
   </div>
 </div>
