--- a/client/src/app/Pages/auth/auth.shared..scss
+++ b/client/src/app/Pages/auth/auth.shared..scss
@@ -3,42 +3,43 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-
-::ng-deep .outlet-wrapper {
-  @media screen and (max-width: 768px) {
-    padding-inline: 0% !important;
-  }
-}
-
 .container {
-  height: 80vh;
+  height: calc(100vh - 200px);
   width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  column-gap: 30px;
 }
-
 .form {
+  position: absolute;
   max-width: 430px;
   width: 100%;
   padding: 30px;
   border-radius: 6px;
   background: #fff;
   border: 1px solid rgb(226, 226, 226);
+  position: relative;
+  top: -200px;
 }
 
+.forms.show-signup .form.signup {
+  opacity: 1;
+  pointer-events: auto;
+}
+.forms.show-signup .form.login {
+  opacity: 0;
+  pointer-events: none;
+}
 header {
   font-size: 28px;
   font-weight: 600;
   color: #232836;
   text-align: center;
 }
-
 form {
   margin-top: 30px;
 }
-
 .form .field {
   position: relative;
   height: 50px;
@@ -46,7 +47,6 @@ form {
   margin-top: 20px;
   border-radius: 6px;
 }
-
 .field input,
 .field button {
   height: 100%;
@@ -56,17 +56,14 @@ form {
   font-weight: 400;
   border-radius: 6px;
 }
-
 .field input {
   outline: none;
   padding: 0 15px;
-  border: 1px solid #cacaca;
+  border: 1px solid#CACACA;
 }
-
 .field input:focus {
-  border: 2px solid #0171d3 !important;
+  border-bottom-width: 2px;
 }
-
 .eye-icon {
   position: absolute;
   top: 50%;
@@ -77,43 +74,32 @@ form {
   cursor: pointer;
   padding: 5px;
 }
-
 .field button {
   color: #fff;
   background-color: #0171d3;
   transition: all 0.3s ease;
   cursor: pointer;
 }
-
 .field button:hover {
   background-color: #016dcb;
 }
-
 .form-link {
   text-align: center;
-  margin-top: 15px;
+  margin-top: 10px;
 }
-
-.form-link:last-of-type {
-  margin-top: 0;
-}
-
 .form-link span,
 .form-link a {
   font-size: 14px;
   font-weight: 400;
   color: #232836;
 }
-
 .form a {
   color: #0171d3;
   text-decoration: none;
 }
-
 .form-content a:hover {
   text-decoration: underline;
 }
-
 .line {
   position: relative;
   height: 1px;
@@ -121,7 +107,6 @@ form {
   margin: 36px 0;
   background-color: #d4d4d4;
 }
-
 .line::before {
   content: "Or";
   position: absolute;
@@ -141,12 +126,8 @@ form {
   align-items: center;
 }
 
-@media screen and (max-width: 482px) {
+@media screen and (max-width: 400px) {
   .form {
-    padding: 22.5px 20px;
-  }
-
-  .container {
-    padding: 0;
+    padding: 20px 10px;
   }
 }
