Remove old authService implementation

--- a/client/src/app/Pages/login/login.component.scss
+++ b/client/src/app/Pages/login/login.component.scss
@@ -144,6 +144,8 @@ form {
 @media screen and (max-width: 482px) {
   .form {
     padding: 22.5px 20px;
+    background: #fff;
+    border: none;
   }
 
   .container {
