--- a/client/src/app/components/friend-card/friend-card.component.html
+++ b/client/src/app/components/friend-card/friend-card.component.html
@@ -14,7 +14,7 @@
     <button
       type="button"
       class="btn btn-light btn-md m-1"
-      (click)="onAddFriend()"
+      (click)="onConfirm()"
     >
       <i class="bx bx-user-plus"></i>
     </button>
