--- a/client/src/app/friend-request/friend-request.component.html
+++ b/client/src/app/friend-request/friend-request.component.html
@@ -1,8 +1,3 @@
-<app-alert
-  alertType="light"
-  alertText="Deine Anfrage muss erst angenommen werden, damit du die Freunde in deiner Kontaktliste sehen kannst!"
-></app-alert>
-
 <input
   class="form-control me-2 mb-2"
   type="search"
@@ -17,7 +12,7 @@
 <div class="col-12 mb-3">
   <app-friend-card
     [friend]="friend"
-    (confirmEvent)="onFriendRequestSend($event)"
+    (confirmEvent)="onFriendAccept($event)"
   ></app-friend-card>
 </div>
 } }
