--- a/client/src/app/components/friend-card/friend-card.component.html
+++ b/client/src/app/components/friend-card/friend-card.component.html
@@ -16,7 +16,7 @@
       class="btn btn-light btn-md m-1"
       (click)="onConfirm()"
     >
-      <i class="bx bx-user-plus"></i>
+      <i [class]="getIconClass()"></i>
     </button>
   </div>
 </div>
