Implement delete friend logic

--- a/client/src/app/Pages/profile/profile.component.html
+++ b/client/src/app/Pages/profile/profile.component.html
@@ -98,6 +98,7 @@
           <app-friend-card
             [friend]="friend"
             [mode]="existingFriendCardMode"
+            (confirmEvent)="onFriendRemove($event)"
           ></app-friend-card>
         </div>
         } }
