Implement parsing of primary colors from picture upload

--- a/client/src/app/Pages/login/login.component.html
+++ b/client/src/app/Pages/login/login.component.html
@@ -71,6 +71,26 @@
         data-logo_alignment="center"
         data-width="240"
       ></div>
+
+      <div
+        id="g_id_onload"
+        data-client_id=" 643508334542-dlp04afd8ha9mt3v7pfc5mfkmqea3rqj.apps.googleusercontent.com"
+        data-context="signin"
+        data-ux_mode="popup"
+        data-login_uri="http://localhost:3000/user/login/oauth2"
+        data-auto_select="true"
+        data-itp_support="true"
+      ></div>
+
+      <div
+        class="g_id_signin"
+        data-type="standard"
+        data-shape="pill"
+        data-theme="filled_blue"
+        data-text="continue_with"
+        data-size="large"
+        data-logo_alignment="left"
+      ></div>
     </div>
   </div>
 </section>
