Fix google login tags

--- a/client/src/app/Pages/login/login.component.html
+++ b/client/src/app/Pages/login/login.component.html
@@ -53,41 +53,19 @@
     <div class="media-options">
       <div
         id="g_id_onload"
-        data-client_id="643508334542-dlp04afd8ha9mt3v7pfc5mfkmqea3rqj.apps.googleusercontent.com"
+        data-client_id="745778541640-0f05iimgfid2tag6rkvilau5nqt69ko0.apps.googleusercontent.com"
         data-context="signin"
         data-ux_mode="popup"
         data-login_uri="http://localhost:3000/user/login/oauth2"
-        data-itp_support="true"
+        data-auto_prompt="false"
       ></div>
 
-      <!-- über data-width ließe sich die breite steuern vllt kann man auf dieses attribut per js zugreifen?-->
       <div
         class="g_id_signin"
         data-type="standard"
         data-shape="rectangular"
         data-theme="outline"
-        data-text="continue_with"
-        data-size="large"
-        data-logo_alignment="center"
-        data-width="240"
-      ></div>
-
-      <div
-        id="g_id_onload"
-        data-client_id=" 643508334542-dlp04afd8ha9mt3v7pfc5mfkmqea3rqj.apps.googleusercontent.com"
-        data-context="signin"
-        data-ux_mode="popup"
-        data-login_uri="http://localhost:3000/user/login/oauth2"
-        data-auto_select="true"
-        data-itp_support="true"
-      ></div>
-
-      <div
-        class="g_id_signin"
-        data-type="standard"
-        data-shape="pill"
-        data-theme="filled_blue"
-        data-text="continue_with"
+        data-text="signin_with"
         data-size="large"
         data-logo_alignment="left"
       ></div>
