--- a/client/src/app/components/toast/toast.component.scss
+++ b/client/src/app/components/toast/toast.component.scss
@@ -1,6 +1,6 @@
 .toast-container {
   position: fixed;
-  bottom: 1rem;
+  bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -8,92 +8,52 @@
   align-items: center;
   z-index: 1055;
 }
+
 .toast {
-  color: #000;
-  background: #fff;
-  border-radius: 12px;
-  padding: 1.75rem 1.125rem 1.75rem 2rem;
-  border-left: 6px solid grey;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  color: #fff;
+  background: #424242;
+  border-radius: 8px;
+  padding: 1rem 1.5rem;
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
   overflow: hidden;
   transform: translateY(100%);
   transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.35);
-  width: 400px;
-  max-width: 100vw;
-  margin-bottom: 1rem;
+  width: 100%;
+  min-width: 285px;
+  max-width: 600px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   position: relative;
+  margin-bottom: 0.5rem;
+  white-space: nowrap;
 }
+
 .toast.active {
   transform: translateY(0%);
 }
-.toast.success {
-  border-left-color: green;
+
+.toast .message {
+  margin: 0;
+  color: #e0e0e0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
-.toast.error {
-  border-left-color: red;
+
+.toast .info {
+  color: #90caf9;
+  margin-left: 2rem;
+  flex-shrink: 0;
+  text-decoration: none;
 }
-.toast.warning {
-  border-left-color: yellow;
-}
-.toast.success .progress:before {
-  background-color: green;
-}
-.toast.error .progress:before {
-  background-color: red;
-}
-.toast.warning .progress:before {
-  background-color: yellow;
-}
-.toast-content .message {
-  display: flex;
-  flex-direction: column;
-  margin: 0 1.35rem;
-}
-.toast .progress {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 3px;
-  width: 100%;
-}
-.toast .progress:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: grey;
-  height: 100%;
-  width: 100%;
-  animation: progress 3.5s linear forwards;
-}
-.progress.active:before {
-  animation: progress 3.5s linear forwards;
-}
-@keyframes progress {
-  100% {
-    right: 100%;
-  }
-}
+
 .close-icon-container {
-  position: absolute;
-  right: 0.85rem;
-  top: 0.85rem;
+  margin-left: 1rem;
   cursor: pointer;
   opacity: 0.7;
 }
-.toast .close:hover {
+
+.close-icon-container:hover {
   opacity: 1;
-}
-#toast-headline {
-  font-weight: bold;
-  color: #333;
-  font-size: 1rem;
-}
-.text {
-  padding-top: 0.25rem;
-  color: #666;
-  font-size: 0.85rem;
 }
