--- a/client/src/app/components/pagination/pagination.component.scss
+++ b/client/src/app/components/pagination/pagination.component.scss
@@ -20,7 +20,10 @@ a {
   color: #222;
 }
 
-/* ONE */
+.pagination a:hover {
+  cursor: pointer !important;
+  background-color: #e7e7e7;
+}
 
 .p1 a {
   width: 40px;
