Add first rest timer scratches

--- a/client/src/app/components/modal/modal.component.html
+++ b/client/src/app/components/modal/modal.component.html
@@ -13,11 +13,13 @@
       <div class="modal-body">
         <ng-template #modalContent></ng-template>
       </div>
+      @if (footer) {
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" (click)="confirm()">
           {{ confirmButtonText }}
         </button>
       </div>
+      }
     </div>
   </div>
 </div>
