--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -15,14 +15,25 @@
           <span class="headline">{{ trainingPlanData.title }}</span>
         </span>
         @if (isMobile) {
-        <button
-          type="button"
-          class="btn btn-light btn-md m-1"
-          appTooltip="Ansehen"
-          (click)="switchToTimerView($event)"
-        >
-          <i class="bx bx-timer"></i>
-        </button>
+        <div>
+          <button
+            type="button"
+            class="btn btn-light btn-md m-1"
+            appTooltip="Ansehen"
+            (click)="switchToTimerView($event)"
+          >
+            <i class="bx bx-microphone"></i>
+          </button>
+          <button
+            type="button"
+            class="btn btn-light btn-md m-1"
+            appTooltip="Ansehen"
+            (click)="switchToTimerView($event)"
+          >
+            <i class="bx bx-timer"></i>
+          </button>
+        </div>
+
         }
       </div>
     </caption>
