--- a/client/src/app/rest-timer/rest-timer.component.scss
+++ b/client/src/app/rest-timer/rest-timer.component.scss
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
 }
 
 .timer-display {
@@ -44,4 +44,8 @@
   background-color: #007bff;
   color: white;
   border: none;
+}
+
+.gap {
+  gap: 1rem;
 }
