--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -20,7 +20,7 @@
             type="button"
             class="btn btn-light btn-md m-1"
             appTooltip="Ansehen"
-            (click)="switchToTimerView($event)"
+            (click)="recordTrainingData($event)"
           >
             <i class="bx bx-microphone"></i>
           </button>
