--- a/client/src/app/Pages/statistics/statistics.component.html
+++ b/client/src/app/Pages/statistics/statistics.component.html
@@ -1,3 +1,7 @@
 <div class="chart-container">
-  <canvas id="MyChart">{{ chart }}</canvas>
+  <canvas id="MyLineChart">{{ lineChart }}</canvas>
+</div>
+
+<div class="chart-container">
+  <canvas id="MyFancyLineChart">{{ lineChart }}</canvas>
 </div>
