--- a/client/src/app/components/training-plan-card/training-plan-card.component.html
+++ b/client/src/app/components/training-plan-card/training-plan-card.component.html
@@ -32,6 +32,14 @@
     <button
       type="button"
       class="btn btn-light btn-md m-1"
+      (click)="viewStatistics(trainingPlan.id)"
+      appTooltip="Statistiken"
+    >
+      <i class="bx bx-chart"></i>
+    </button>
+    <button
+      type="button"
+      class="btn btn-light btn-md m-1"
       (click)="showEditTrainingPlanModal(trainingPlan.id)"
       appTooltip="Bearbeiten"
     >
