Further Scratchs for stat page

--- a/client/src/app/Pages/statistics/statistics.component.html
+++ b/client/src/app/Pages/statistics/statistics.component.html
@@ -5,3 +5,7 @@
 <div class="chart-container">
   <canvas id="MyFancyLineChart">{{ lineChart }}</canvas>
 </div>
+
+<div class="chart-container">
+  <canvas id="MyPieChart">{{ lineChart }}</canvas>
+</div>
