--- a/client/src/app/Pages/statistics/statistics.component.scss
+++ b/client/src/app/Pages/statistics/statistics.component.scss
@@ -1,3 +1,13 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
 #MyLineChart {
   height: 400px;
+}
+
+#MyFancyLineChart {
+  height: 500px;
 }
