--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="py-3 mb-3 border-bottom bg-light">
+<header id="header" class="py-3 mb-3 border-bottom bg-light">
   <div
     class="container-fluid d-grid gap-3 align-items-center"
     style="grid-template-columns: 1fr 2fr"
@@ -6,7 +6,7 @@
     <div class="dropdown">
       <a
         href="#"
-        class="d-flex align-items-center col-lg-4 mb-2 mb-lg-0 link-dark text-decoration-none dropdown-toggle"
+        class="d-flex align-items-center col-lg-4 mb-lg-0 link-dark text-decoration-none dropdown-toggle"
         id="dropdownNavLink"
         data-bs-toggle="dropdown"
         aria-expanded="false"
