--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -2,42 +2,41 @@
 <app-spinner></app-spinner>
 } @else {
 <form (submit)="onSubmit($event)" class="mt-4" id="form">
+  <div id="fixed-caption">
+    <div class="d-flex justify-content-between align-items-center">
+      <span>
+        <span class="context-headline"
+          >W{{ trainingWeekIndex + 1 }}D{{ trainingDayIndex + 1 }}</span
+        >
+        <span class="headline">{{ trainingPlanData.title }}</span>
+      </span>
+      @if (isMobile) {
+      <div>
+        <button
+          type="button"
+          class="btn btn-light btn-md m-1"
+          appTooltip="Ansehen"
+          (click)="recordTrainingData($event)"
+        >
+          <i class="bx bx-microphone"></i>
+        </button>
+        <button
+          type="button"
+          class="btn btn-light btn-md m-1"
+          appTooltip="Ansehen"
+          (click)="switchToTimerView($event)"
+        >
+          <i class="bx bx-timer"></i>
+        </button>
+      </div>
+      }
+    </div>
+  </div>
+
   <table
     #trainingTable
     class="table table-striped training-table responsive-table caption-top mb-4"
   >
-    <caption>
-      <div class="d-flex justify-content-between align-items-center">
-        <span>
-          <span class="context-headline"
-            >W{{ trainingWeekIndex + 1 }}D{{ trainingDayIndex + 1 }}</span
-          >
-          <span class="headline">{{ trainingPlanData.title }}</span>
-        </span>
-        @if (isMobile) {
-        <div>
-          <button
-            type="button"
-            class="btn btn-light btn-md m-1"
-            appTooltip="Ansehen"
-            (click)="recordTrainingData($event)"
-          >
-            <i class="bx bx-microphone"></i>
-          </button>
-          <button
-            type="button"
-            class="btn btn-light btn-md m-1"
-            appTooltip="Ansehen"
-            (click)="switchToTimerView($event)"
-          >
-            <i class="bx bx-timer"></i>
-          </button>
-        </div>
-
-        }
-      </div>
-    </caption>
-
     <thead>
       <tr>
         <th scope="col">Category</th>
