--- a/client/src/app/Pages/training-view/training-view.component.scss
+++ b/client/src/app/Pages/training-view/training-view.component.scss
@@ -41,13 +41,10 @@
   font-size: 1.75rem;
 }
 
-table caption {
-  caption-side: top;
-  text-align: left;
-  font-size: 1.5rem;
+#fixed-caption {
   font-weight: bold;
-
-  padding-bottom: 1.75rem;
+  font-family: "Poppins", sans-serif;
+  padding-bottom: 1.5rem;
 }
 
 .context-headline,
@@ -115,7 +112,13 @@ table caption {
     text-align: left;
   }
 
-  table caption {
-    padding-bottom: 1rem;
+  #fixed-caption {
+    padding-bottom: 0.65rem;
+
+    /* position: fixed;
+    top: 100px;
+    width: 100%;
+    background-color: white;
+    z-index: 1000; */
   }
 }
