Implement time out boxing bell

--- a/client/src/app/Pages/training-view/training-view.component.scss
+++ b/client/src/app/Pages/training-view/training-view.component.scss
@@ -116,8 +116,10 @@
     padding-bottom: 0.65rem;
 
     /* position: fixed;
-    top: 100px;
-    width: 100%;
+    top: 71.25px;
+    left: 5%;
+    right: 5%;
+
     background-color: white;
     z-index: 1000; */
   }
