--- a/client/src/app/Pages/statistics/statistics.component.html
+++ b/client/src/app/Pages/statistics/statistics.component.html
@@ -1,11 +1,7 @@
-<div class="chart-container">
-  <canvas id="MyLineChart">{{ lineChart }}</canvas>
-</div>
+@if (!dataLoaded) {
+<app-spinner />
+}
 
-<div class="chart-container">
-  <canvas id="MyFancyLineChart">{{ lineChart }}</canvas>
-</div>
-
-<div class="chart-container">
-  <canvas id="MyPieChart">{{ lineChart }}</canvas>
+<div>
+  <canvas id="MyLineChart"></canvas>
 </div>
