--- a/client/src/app/multi-select/multi-select.component.html
+++ b/client/src/app/multi-select/multi-select.component.html
@@ -5,7 +5,9 @@
     aria-haspopup="true"
     aria-expanded="isOpen()"
   >
-    {{ getSelectedText() }}
+    <span>{{ getSelectedText() }}</span>
+    <span class="caret"></span>
+    <!-- Chevron icon is always to the right -->
   </button>
   <div
     class="dropdown-menu p-2"
@@ -27,7 +29,7 @@
         type="checkbox"
         class="form-check-input"
         [id]="option"
-        [checked]="selected().has(option)"
+        [checked]="selected().includes(option)"
         (change)="onSelectionChange(option, $event)"
       />
       <label class="form-check-label" [for]="option">{{ option }}</label>
