Implement fetch all exercises from backend

--- a/client/src/app/Pages/statistics/statistics.component.html
+++ b/client/src/app/Pages/statistics/statistics.component.html
@@ -2,7 +2,7 @@
 <app-spinner />
 } @else {
 <app-multi-select
-  [options]="['Squat', 'Bench', 'Deadlift', 'Overheadpress']"
+  [options]="allExercises"
   [initialSelected]="selectedExercises!"
   (selectionChange)="changeDisplayCategories($event)"
 ></app-multi-select>
