Add styling to line chart component

--- a/client/src/app/Pages/statistics/statistics.component.html
+++ b/client/src/app/Pages/statistics/statistics.component.html
@@ -7,9 +7,8 @@
   (selectionChange)="changeDisplayCategories($event)"
 ></app-multi-select>
 }
-
 <div>
-  <canvas id="MyLineChart"></canvas>
+  <canvas id="lineChart"></canvas>
 </div>
 
 <div>
