Implement bar chart componenet with mock data adjust layout

--- a/client/src/app/Pages/statistics/statistics.component.html
+++ b/client/src/app/Pages/statistics/statistics.component.html
@@ -13,13 +13,5 @@
   yAxisTitle="Tonnage (kg)"
 ></app-line-chart>
 
-<app-pie-chart
-  [data]="pieChartData"
-  [labels]="pieChartLabels"
-  [backgroundColors]="pieChartBackgroundColors"
-></app-pie-chart>
+<app-grouped-bar-chart></app-grouped-bar-chart>
 }
-
-<!-- <div>
-  <canvas id="lineChart"></canvas>
-</div> -->
